Merge pull request #10
* fix permissions, add chat history

* fix permissions, add chat history

* fix permissions, add chat history